--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,25 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
-uvicorn = "*"
-motor = "*"
-pydantic = "*"
-faker = "*"
+annotated-types = "==0.7.0"
+anyio = "==4.4.0"
+click = "==8.1.7"
+dnspython = "==2.6.1"
+exceptiongroup = "==1.2.2"
+faker = "==27.0.0"
+fastapi = {extras = ["standard"], version = "==0.112.0"}
+h11 = "==0.14.0"
+idna = "==3.7"
+motor = "==3.5.1"
+pydantic = "==2.8.2"
+pydantic-core = "==2.20.1"
+pymongo = "==4.8.0"
+python-dateutil = "==2.9.0.post0"
+six = "==1.16.0"
+sniffio = "==1.3.1"
+starlette = "==0.37.2"
+typing-extensions = "==4.12.2"
+uvicorn = {extras = ["standard"], version = "==0.30.5"}
 
 [dev-packages]
 
