--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ sniffio = "==1.3.1"
 starlette = "==0.37.2"
 typing-extensions = "==4.12.2"
 uvicorn = {extras = ["standard"], version = "==0.30.5"}
+requests = "*"
 
 [dev-packages]
 
