add userSession email to model. update docker build files and API routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.8"
 
 services:
-  mongodb:
+  favorites-mongodb:
     image: mongo:latest
-    container_name: mongodb
+    container_name: favorites-mongodb
     ports:
-      - "27017:27017" # Expose MongoDB on port 27017
+      - "27017:27017"
 
   favorites-service:
     build: .
     container_name: favorites-service
     ports:
-      - "8001:8001" # Expoose FastAPI on port 8000. Expose the port to the host machine on 8001.
+      - "8001:8001"
     environment:
-      - MONGODB_URL=mongodb://mongodb:27017/favorites_db
+      - MONGODB_URL=mongodb://favorites-mongodb:27017/favorites_db
     depends_on:
-      - mongodb # Ensure MongoDB starts before the FastAPI service
+      - favorites-mongodb
